--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.3
   google_fonts: ^0.4.1
+  audioplayers: ^0.15.1
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +35,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/aykutasil.png
+    - assets/audio/
+    - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
