--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   google_fonts: ^0.4.1
   audioplayers: ^0.15.1
+  font_awesome_flutter: ^8.8.1
 
 dev_dependencies:
   flutter_test:
