--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   audioplayers: ^0.15.1
   font_awesome_flutter: ^8.8.1
   geolocator: ^5.3.1
+  http: ^0.12.1
 
 dev_dependencies:
   flutter_test:
